# srvlookup

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py  srvlookup.py  tests.py
.github/workflows/: deploy.yaml  testing.yaml
srvlookup/: __init__.py  main.py
tests/: test_srvlookup.py
