[metadata]
name = srvlookup
version = 3.0.0
description = Service lookup using DNS SRV records
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/gmr/srvlookup
project_urls =
    Bug Tracker = https://github.com/gmr/srvlookup/issues
    Documentation = https://srvlookup.readthedocs.io
    Source Code = https://github.com/gmr/srvlookup/
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Communications
    Topic :: Internet
    Topic :: Software Development :: Libraries
requires-dist = setuptools
keywords =
    dns
    srv

[options]
include_package_data = True
install_requires =
    dnspython>=2.0.0,<3
packages =
    srvlookup
python_requires = >=3.7
zip_safe = true

[options.extras_require]
testing =
    coverage
    flake8
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    flake8-tuple
    yapf

[build_sphinx]
all-files = 1

[coverage:run]
branch = True
command_line = -m unittest discover tests --verbose
data_file = build/.coverage

[coverage:report]
show_missing = True
include =
    srvlookup/*
omit =
    tests/*.py

[coverage:html]
directory = build/coverage

[coverage:xml]
output = build/coverage.xml

[flake8]
application-import-names = srvlookup
exclude = .github,env
import-order-style = google
rst-roles = attr,class,const,data,exc,func,meth,mod,obj,py:class,py:mod
